[package]
name = "xcode-ai-proxy-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.9"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
